<resources>
    <string name="app_name">Vadakkekad Online</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vadakkekad Online.</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_advertise">Advertise With Us</string>
    <string name="menu_shareapp">Share App</string>
    <string name="menu_feedback">Send Feedback</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_new">ഇവിടെ വിവരങ്ങൾ ചേർക്കുക</string>
    <string name="menu_call">Call</string>
    <string name="menu_whatsapp">Contact Us</string>
    <string name="menu_contactus">Contact us</string>
    <string name="share_content">Hey, please check this app for getting our services.\nService App  \n\nFirst Floor KMA Tower, \nOpposite Kunnamkulam Muncipality, \nKerala 680503, \nIndia \n\n7994648430    \n\n  https://play.google.com/store/apps/details?id=com.vingcoz.VadakkekadOnline</string>
    <string name="exit">Exit</string>

</resources>