<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.serviceapp.home.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_advertisement"
        android:name="com.example.serviceapp.home.ui.advertise.AdvertiseFragment"
        android:label="@string/menu_advertise"
        tools:layout="@layout/fragment_advertise" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.serviceapp.home.ui.feedback.FeedBcakFragment"
        android:label="@string/menu_shareapp"
        tools:layout="@layout/fragment_feed_bcak" />
    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.serviceapp.home.ui.share.ShareFragment"
        android:label="@string/menu_shareapp"
        tools:layout="@layout/fragment_share" />

</navigation>